--- a/index.html
+++ b/index.html
@@ -25,9 +25,12 @@
             <div class="introducao-div">
                 <h1>CRIE PÁGINAS INCRÍVEIS<br>
                     E DE ALTA CONVERSÃO</h1>
-                <p>Com nossos +10.000 modelos editáveis ​​no<br>
-                    Elementor prontos para aumentar suas conversões!</p>
-                <img src="./img/SITES2-FOTO-PRINCIPAL.png.webp" alt="">
+                <div class="introducao-paragrafo">
+                    <p>Com nossos +10.000 modelos editáveis ​​no<br>
+                        Elementor prontos para aumentar suas conversões!</p>
+                </div>
+
+                <div class="introducao-img"><img src="./img/SITES2-FOTO-PRINCIPAL.png.webp" alt=""></div>
             </div>
 
         </section>
