--- a/index.html
+++ b/index.html
@@ -45,11 +45,13 @@
                 <h2>DE R$97,00</h2>
                 <h3>POR APENAS</h3>
                 <h1>R$10</h1>
-                <h3>MAS VOCÊ PRECISA AGIR RÁPIDO...</h3>
-                <a href="/">Comprar agora</a>
-            </div>
 
-            <div></div>
+                <h3>MAS VOCÊ PRECISA AGIR RÁPIDO...</h3>
+
+                <div class="comprar">
+                    <a href="/">Comprar agora</a>
+                </div>
+            </div>
         </section>
     </main>
 
