--- a/index.html
+++ b/index.html
@@ -45,13 +45,63 @@
                 <h2>DE R$97,00</h2>
                 <h3>POR APENAS</h3>
                 <h1>R$10</h1>
-
                 <h3>MAS VOCÊ PRECISA AGIR RÁPIDO...</h3>
 
                 <div class="comprar">
                     <a href="/">Comprar agora</a>
                 </div>
             </div>
+
+
+            <div class="element-passo">
+                <div class="text">
+                    <h1> tudo editável em elementor!</h1>
+                    <p>Você não precisa criar nada do zero. Tenha acesso a +10.000 Páginas de Vendas
+                        prontas e<br>
+                        editáveis
+                        ​​(Landing Pages, Sites Listados e Páginas de Vendas). Usando este método, você simplesmente
+                        arrastará e soltará com o mouse e criará sites incríveis em minutos.
+                    </p>
+                </div>
+                <div class="beneficio-container">
+                    <div class="beneficios">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+
+                    <div class="beneficios">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+
+                    <div class="beneficios">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+
+                    <div class="beneficios">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+                </div>
+            </div>
+
         </section>
     </main>
 
