--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
@@ -12,8 +12,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;0,900;1,700&display=swap"
         rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script>
+
     <title>Inicio - Pack cc</title>
     <link rel="stylesheet" href="./css/style.css">
+
 </head>
 
 <body>
@@ -102,10 +105,234 @@
                 </div>
             </div>
 
+
+
+
+        </section>
+
+        <section>
+            <div class="quantidade">
+                <div class="text">
+                    <h1>+10.000</h1>
+                    <div>
+                        <p>Page templates 100%
+                            editáveis ​​no elementor,
+                            otimizados para dispositivos
+                            móveis, para você baixar
+                            e importar para o seu
+                            WordPress.</p>
+                    </div>
+                </div>
+            </div>
+
+        </section>
+        <section class="pacote">
+            <div class="pacote-venda">
+
+                <h1>PARA QUEM É O PACOTE DE PÁGINAS DE VENDAS?</h1>
+                <div class="space">
+                    <div class="beneficios1">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+
+                    <div class="beneficios1">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+
+                    <div class="beneficios1">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+
+                    <div class="beneficios1">
+                        <div></div>
+                        <h3>passo 1</h3>
+                        <p>Você acessa a área de
+                            membros, escolhe o
+                            modelo de sua preferência e
+                            baixa.</p>
+                    </div>
+                    <div class="text-end">
+                        <p class="paragrafo">…é para quem vende ou quer vender produtos e serviços na internet!</p>
+
+                        <a href="/">Comprar agora</a>
+
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="prova-container">
+                <div class="prova">
+                    <div class="prova-text">
+                        <h2>Esqueça todos os modelos de página de vendas que você viu por aí…</h2>
+                        <h1>ESTAS SÃO PÁGINAS PROFISSIONAIS REAIS!</h1>
+                    </div>
+                    <div class="slider">
+                        <div class="slides">
+
+
+                            <div class="slide first ">
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                                <div>
+                                    <img src="./img/modelo-vsl-169x300-2.jpg.webp" alt="">
+                                </div>
+                            </div>
+
+
+
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </section>
+        <section class="oferta-container">
+            <div class="oferta">
+                <h1 class="titulo-oferta">ESCOLHA A MELHOR OFERTA</h1>
+            </div>
+
+            <section class="escolha-oferta">
+
+                <div class="oferta-basica">
+                    <div class="oferta-titulo">
+                        <h2>OFERTA BÁSICA</h2>
+                    </div>
+
+                    <div>
+                        <h1><span>R$</span> 10,00</h1>
+                    </div>
+
+                    <div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>Acesso imediato</span>
+                        </div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>+ de 10.000 Modelos Editáveis</span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="oferta-basica ">
+                    <div class="oferta-titulo super">
+                        <h2>SUPER OFERTA</h2>
+                    </div>
+                    <span class="vendido">+ vendido</span>
+                    <div>
+                        <h1><span>R$</span> 27,00</h1>
+                    </div>
+
+                    <div class="container-acesso">
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>Acesso imediato</span>
+                        </div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>+ de 10.000 Modelos Editáveis</span>
+                        </div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>+ de 10.000 Modelos Editáveis</span>
+                        </div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>+ de 10.000 Modelos Editáveis</span>
+                        </div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>+ de 10.000 Modelos Editáveis</span>
+                        </div>
+                        <div class="acesso">
+                            <box-icon name='check-circle' color="#0b9b00"></box-icon>
+                            <span>+ de 10.000 Modelos Editáveis</span>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+
+        </section>
+        <section class="garanta">
+
+            <div class="garanta-titulo">
+                <h1>NÃO PERCA TEMPO, GARANTA JÁ!</h1>
+            </div>
+
+            <div class="pergunta-titulo">
+                <h2><span>TEM DÚVIDAS? CONFIRA AS</span><br>
+                    PERGUNTAS FREQUENTES</h2>
+            </div>
+            <dl data-accordion>
+                <dt>Como receberei?</dt>
+                <dd>Logo após o pagamento, você receberá automaticamente em minutos os dados de acesso em
+                    seu email
+                    cadastrado.</dd>
+                <dt>O Pagamento é único?</dt>
+                <dd>Sim! Pagamento único, sem cobranças adicionais.</dd>
+                <dt>Serve para iniciantes?</dt>
+                <dd>Sim! E se tiver alguma dúvida, temos as aulas tutorias que vão te ajudar e o suporte também.
+                </dd>
+            </dl>
+
+        </section>
+
+        <section class="dia">
+            <div class="dia-imagem">
+                <img src="./img/7-DIAS.png.webp" alt="">
+            </div>
+            <div class="dia-text">
+                <h1>7 DIAS DE GARANTIA!</h1>
+                <p>O risco é assumido por nós, se em 7 dias você achar que este conteúdo não é para você. Você pode
+                    solicitar um reembolso de 100% do seu dinheiro. Você não precisa nos dizer o motivo, pois pode fazer
+                    o processo automaticamente pela plataforma Kiwify.
+                </p>
+                <div class="comprar">
+                    <a href="/">Comprar agora</a>
+                </div>
+            </div>
+
         </section>
     </main>
 
-    <script src="./js/script.js"></script>
+    <script type="module" src="./js/script.js"></script>
 </body>
 
 </html>
